--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
     <header>
         <div class="sub_menu_wrap">
             <ul class="menu_bar">
-                <li><a href="">HOME</a></li>
-                <li><a href="">PROFILE</a></li>
-                <li><a href="">WEB</a></li>
-                <li class="on"><a href="">VIDEO</a></li>
-                <li><a href="">HISTORY</a>
+                <li><a href="https://ajungportfolio-main.netlify.app">HOME</a></li>
+                <li><a href="https://ajungportfolio-sub-profile.netlify.app">PROFILE</a></li>
+                <li><a href="https://ajungportfolio-sub-web.netlify.app">WEB</a></li>
+                <li class="on"><a href="https://ajungportfolio-sub-video.netlify.app">VIDEO</a></li>
+                <li><a href="https://ajungportfolio-sub-history-img.netlify.app">HISTORY</a>
                     <ul class="sub_menu">
-                        <li><a href="">Image</a></li>
-                        <li><a href="">Web</a></li>
-                        <li><a href="">History</a></li>
+                        <li><a href="https://ajungportfolio-sub-history-img.netlify.app">Image</a></li>
+                        <li><a href="https://ajungportfolio-sub-history-web.netlify.app">Web</a></li>
+                        <li><a href="https://ajungportfolio-sub-history-video.netlify.app">History</a></li>
                     </ul>
                 </li>
             </ul>
