--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" type="text/css" href="sub.css" />
-    <link rel="stylesheet" href="slick/slick.css" />
-    <link rel="stylesheet" href="slick/slick-theme.css" />
+    <link rel="stylesheet" type="text/css" href="sub.css">
+    <link rel="stylesheet" href="slick/slick.css">
+    <link rel="stylesheet" href="slick/slick-theme.css">
     
     <script src="jquery-3.6.3.min.js"></script>
     <script src="slick/slick.min.js"></script>
@@ -26,7 +26,7 @@
                     <ul class="sub_menu">
                         <li><a href="https://ajungportfolio-sub-history-img.netlify.app">Image</a></li>
                         <li><a href="https://ajungportfolio-sub-history-web.netlify.app">Web</a></li>
-                        <li><a href="https://ajungportfolio-sub-history-video.netlify.app">History</a></li>
+                        <li><a href="https://ajungportfolio-sub-history-video.netlify.app">Video</a></li>
                     </ul>
                 </li>
             </ul>
